src/components/CoverContainer/CoverContainer.module.css
.coverContainer {
  position: relative;
  height: 100%;
  will-change: opacity;
  display: flex;
  justify-content: center;
}

.coverContainer > img {
  max-width: 100%;
  height: 100%;
  object-fit: contain;
  filter: drop-shadow(var(--standard-shadow));
}

.coverContainer > div {
  position: absolute;
  width: 100%;
  height: 100%;
  filter: var(--default-blur);
  opacity: 0.8;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  z-index: -1;
  overflow: scroll;
}

.coverContainer > div > p {
  width: 25%;
}

.altCover {
  display: none;
}

@media (max-width: 768px) {
  div > section.coverContainer > img {
    filter: var(--default-blur);
  }

  .altCover {
    display: flex;
    position: absolute;
    top: 0px;
    height: 100%;
    width: 100%;
    justify-content: center;
    align-items: center;
  }

  .altCover > img {
    width: 95%;
    box-shadow: 0px 0px 100px 25px;
  }
}

